Добавлены страницы регистрации и авторизации

--- a/src/components/Cards/Cards.module.sass
+++ b/src/components/Cards/Cards.module.sass
@@ -24,6 +24,10 @@
     gap: 11.3px
     align-items: center
     justify-content: center
+    transition: 0.3s
+
+.btn:hover
+    scale: 1.03
 
 
 .btnArrow
