--- a/src/components/HeadSingleCard/HeadSingleCard.module.sass
+++ b/src/components/HeadSingleCard/HeadSingleCard.module.sass
@@ -13,6 +13,10 @@
     height: 38px
     @include btn-title
     margin-top: -7px
+    transition: 0.3s
+
+.btnBack:hover
+    scale: 1.03
 
 .avatar
     width: 187px
