--- a/src/components/Card/Card.module.sass
+++ b/src/components/Card/Card.module.sass
@@ -15,6 +15,11 @@
     box-shadow: 0px 0.996045px 3.98418px rgba(51, 51, 51, 0.15)
     border-radius: 10px
     z-index: 0
+    transition: 0.3s
+
+.card:hover
+    cursor: pointer
+    scale: 1.03
 
 .avatar
     width: 124px
