--- a/src/styles/@mixins.sass
+++ b/src/styles/@mixins.sass
@@ -32,3 +32,10 @@
   font-weight: 400
   font-size: 32px
   line-height: 38px
+
+@mixin text
+  font-family: 'Roboto'
+  font-style: normal
+  font-weight: 400
+  font-size: 16px
+  line-height: 21.79px
