--- a/src/components/CardText/CardText.module.sass
+++ b/src/components/CardText/CardText.module.sass
@@ -40,3 +40,25 @@
     background-image: url('../../assets/icons/envelope.svg')
     background-repeat: no-repeat
 
+@media screen and (max-width: 1224px)
+    .cardText
+        margin: 49px 0 0
+        padding: 0 0 0 80px
+
+@media screen and (max-width: 1120px)
+    .cardText
+        padding: 0 80px
+        
+@media screen and (max-width: 900px)
+    .cardText
+        flex-direction: column-reverse
+        gap: 34px
+        margin: 33px auto 32px
+
+    .contacts
+        gap: 25px
+
+@media screen and (max-width: 550px)
+    .cardText
+        padding: 0 16px
+
