--- a/src/components/Cards/Cards.module.sass
+++ b/src/components/Cards/Cards.module.sass
@@ -1,8 +1,8 @@
 @import "../../styles/@mixins"
 
 .cards
-    padding: 48px 0 69px
-    max-width: 1280px
+    padding: 48px 80px 69px
+    max-width: 1440px
     margin: 0 auto
     display: flex
     flex-direction: column
@@ -29,8 +29,26 @@
 .btn:hover
     scale: 1.03
 
-
 .btnArrow
     background-image: url('../../assets/icons/arrow.svg')
     width: 17.41px
     height: 10px
+
+@media screen and (max-width: 1439px)
+    .cards
+        max-width: 1115px
+
+@media screen and (max-width: 1114px)
+    .cards
+        max-width: 790px
+
+@media screen and (max-width: 789px)
+    .cards
+        max-width: 465px
+
+@media screen and (max-width: 465px)
+    .cards
+        padding: 48px 35px 69px
+    .list
+        flex-direction: column
+        align-items: center
