--- a/src/components/HeadCards/HeadCards.module.sass
+++ b/src/components/HeadCards/HeadCards.module.sass
@@ -17,3 +17,12 @@
     color: #FFFFFF
     @include heading-h2
     text-align: center
+
+@media screen and (max-width: 900px)
+    .title
+        font-size: 36px
+        line-height: 42px
+
+    .subtitle
+        font-size: 16px
+        line-height: 19px
