--- a/src/components/HeadSection/HeadSection.module.sass
+++ b/src/components/HeadSection/HeadSection.module.sass
@@ -13,6 +13,7 @@
     display: flex
     position: relative
     align-items: center
+    padding: 0 80px
 
 .btn
     color: #F8F8F8
@@ -28,4 +29,24 @@
 
 .btn:hover
     scale: 1.03
-    
+
+.btnTablet
+    width: 18px
+    height: 18px
+    background-image: url('../../assets/icons/exit-mobile.svg')
+    transition: 0.3s
+    position: absolute
+    right: 80px
+    top: 23px
+    background-repeat: no-repeat
+
+.btnTablet:hover
+    scale: 1.03
+
+@media screen and (max-width: 550px)
+    .wrapper
+        padding: 0 16px
+
+    .btnTablet
+        right: 27px
+
