--- a/src/components/SignUp/SignUp.module.sass
+++ b/src/components/SignUp/SignUp.module.sass
@@ -42,11 +42,22 @@
     font-size: 14px
     line-height: 16px
     padding: 16px 8px 16px 16px
-    
 
 .inputError
     composes: input
     border: 1px solid #FF6161
+
+.showPass
+    width: 24px
+    height: 24px
+    background-image: url('../../assets/icons/show-pass.svg')
+    position: absolute
+    right: 8px
+    bottom: 11px
+
+.showPass:hover
+    scale: 1.03
+    box-shadow: 0px 0.996045px 3.98418px rgba(51, 51, 51, 0.15)
 
 .error
     @include text
